kqed/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Qualifying_Gift_In_kind__c</fullName>
        <label>Qualifying Gift In-kind</label>
        <picklist>
            <picklistValues>
                <fullName>Bud Gundy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Marucci</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathy Sato</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanna Lin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifying_Gift_Kind__c</fullName>
        <label>Qualifying Gift Kind</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustaining Gift</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Qualifying_Payment_Method__c</fullName>
        <label>Qualifying Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCoupons</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Radio_rundown__c</fullName>
        <label>Radio rundown</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Script_Assign__c</fullName>
        <inlineHelpText>Who is assigned to write the script?</inlineHelpText>
        <label>Script Assign</label>
        <picklist>
            <picklistValues>
                <fullName>Beth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_To_PT__c</fullName>
        <formula>HYPERLINK(&quot;/apex/SendToPledgeTaker?id=&quot; &amp; Id, &quot;Send to PT&quot;, &quot;_blank&quot;)</formula>
        <label>Send To PT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <label>Shipping Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_description__c</fullName>
        <label>Short description</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Notes__c</fullName>
        <label>Special Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <picklist>
            <picklistValues>
                <fullName>KCRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KQED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>KQED+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Street Address Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TV_script__c</fullName>
        <label>TV script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <formula>Units_Ordered__c  -  Units_Sold_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units available to sell. # Ordered - # Sold</inlineHelpText>
        <label>Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Backordered__c</fullName>
        <formula>MIN(0, Units_Received__c - Units_Sold__c - Units_Shipped__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units required to receive to fulfill current orders. (Received - Sold - Shipped)</inlineHelpText>
        <label>Units Backordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_On_Hand__c</fullName>
        <formula>Units_Received_calc__c  -  Units_Shipped_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units physically present in inventory. # Received – # Shipped</inlineHelpText>
        <label>Units On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_On_Order__c</fullName>
        <formula>Units_On_Order_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units ordered but not yet received.</inlineHelpText>
        <label>Units On-Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_On_Order_calc__c</fullName>
        <label>Units On-Order (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Ordered__c</fullName>
        <formula>Units_Ordered_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total units ordered. Total # PO Unreceived + Received</inlineHelpText>
        <label>Units Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Ordered_calc__c</fullName>
        <label>Units Ordered (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Pending_Receipt__c</fullName>
        <formula>Units_Ordered__c  -  Units_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units ordered but not yet received.</inlineHelpText>
        <label>Units On-Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Pending_Shipment__c</fullName>
        <formula>Units_Pending_Shipment_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units scheduled to be shipped soon. (Shipment status = Pending)</inlineHelpText>
        <label>Units Pending Shipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Pending_Shipment_calc__c</fullName>
        <label>Units Pending Shipment (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Received__c</fullName>
        <formula>Units_Received_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of units received (ever). Total # PO Received</inlineHelpText>
        <label>Units Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Received_calc__c</fullName>
        <label>Units Received (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Shipped__c</fullName>
        <formula>Units_Shipped_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units shipped (ever). Total # Shipped.</inlineHelpText>
        <label>Units Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Shipped_calc__c</fullName>
        <label>Units Shipped (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Sold__c</fullName>
        <formula>Units_Sold_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of unshipped units that have been sold. Total # committed to closed pledges.</inlineHelpText>
        <label>Units Committed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Sold_calc__c</fullName>
        <label>Units Sold (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Unshipped__c</fullName>
        <formula>Units_Sold_calc__c -  Units_Shipped_calc__c -  Units_Pending_Shipment_calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Units Sold - Units Shipped - Units Pending Shipment</inlineHelpText>
        <label>Units Unshipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_List__c</fullName>
        <label>Vendor List</label>
        <picklist>
            <picklistValues>
                <fullName>Acorn Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agape Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America&apos;s Test Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Door Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Mountain Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Marty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadway&apos;s Lost Treasures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brown &amp; Bigelow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crewneck Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutters Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Row c/o Rashford and Kruse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJP Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLT Entertainment Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dramatico Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream Journey Productions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1 Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eagle Rock Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise To Heal, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Favored Nations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Films for Humanities &amp; Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fons Vitae Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forest Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Music Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Great Musical Treasures, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSRJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Premium_Benefit__c</fullName>
        <inlineHelpText>Code used to order premiums with production vendor.</inlineHelpText>
        <label>Vendor Premium/Benefit #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Name of Vendor</description>
        <inlineHelpText>Name of product vendor.</inlineHelpText>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>no_of_items__c</fullName>
        <label># of Items</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xF_ContactID__c</fullName>
        <description>Drive Premiums</description>
        <externalId>true</externalId>
        <inlineHelpText>What Contact provided this Premium?</inlineHelpText>
        <label>xF_ContactID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xP_ItemID__c</fullName>
        <description>Drive Premiums</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the imported ID for the Item in SubDrive.</inlineHelpText>
        <label>xP_ItemID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Units_Available__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Vendor__c</columns>
        <columns>Vendor_Premium_Benefit__c</columns>
        <columns>Inventory_Balance__c</columns>
        <columns>Inventory_Location__c</columns>
        <columns>Alternate_Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Premiums/Benefits</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Drive_Premiums</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>No_Confirmation_Letter__c</columns>
        <columns>Premium_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <label>All Active Drive Premiums</label>
    </listViews>
    <listViews>
        <fullName>All_Active_WGBY_Premiums</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Premium_Category__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>End_Date__c</columns>
        <columns>FMV__c</columns>
        <columns>Inventory_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Premium</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Station__c</field>
            <operation>equals</operation>
            <value>WGBY</value>
        </filters>
        <label>All Active WGBY Premiums</label>
    </listViews>
    <listViews>
        <fullName>All_Premiums</fullName>
        <filterScope>Everything</filterScope>
        <label>All Premiums</label>
    </listViews>
    <listViews>
        <fullName>All_Premiums1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Limits__c</columns>
        <columns>Donation_Byline__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Charge_Shipping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>G</value>
        </filters>
        <label>Dictionary Review Premiums</label>
    </listViews>
    <listViews>
        <fullName>All_Premiums_w_out_Premium_Category</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Premium_Category__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Premiums w/out Premium Category</label>
        <sharedTo>
            <groups>Drive Premiums</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved_Test</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Copy_Status__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>g</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved - Test</label>
    </listViews>
    <listViews>
        <fullName>Change_Copy_Status</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Copy_Status__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Drive_Campaign__c</field>
            <operation>contains</operation>
            <value>S11</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>g</value>
        </filters>
        <label>View Copy Status</label>
    </listViews>
    <listViews>
        <fullName>Copy_Approved</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Copy_Status__c</columns>
        <columns>Script_Assign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>Drive_Campaign__c</field>
            <operation>contains</operation>
            <value>s11</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>Premium_Category__c</field>
            <operation>notContain</operation>
            <value>Music Pack,C - Compact Discs,G - Grub,X – Music Packs</value>
        </filters>
        <label>Copy - All Status</label>
    </listViews>
    <listViews>
        <fullName>Copy_Being_Proofed</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>Script_Assign__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Copy_Status__c</field>
            <operation>equals</operation>
            <value>Being Proofed</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>g</value>
        </filters>
        <label>Copy - Being Proofed</label>
    </listViews>
    <listViews>
        <fullName>Copy_Copy_On_Its_Way</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Script_Assign__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Copy_Status__c</field>
            <operation>equals</operation>
            <value>Copy on Its Way</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <label>Copy - Copy On Its Way</label>
    </listViews>
    <listViews>
        <fullName>Copy_Need_Info</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Script_Assign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Copy_Status__c</field>
            <operation>equals</operation>
            <value>Need Info</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>G</value>
        </filters>
        <label>Copy - Need Info</label>
    </listViews>
    <listViews>
        <fullName>Copy_Need_Info1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Script_Assign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Copy_Status__c</field>
            <operation>equals</operation>
            <value>Info/Copy on-Hand</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>G</value>
        </filters>
        <label>Copy - Info Copy On Hand (Assign)</label>
    </listViews>
    <listViews>
        <fullName>Copy_Printed</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>Script_Assign__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Copy_Status__c</field>
            <operation>equals</operation>
            <value>Printed</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>g</value>
        </filters>
        <label>Copy - Printed</label>
    </listViews>
    <listViews>
        <fullName>Copy_Sent_For_Approval</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>Script_Assign__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Copy_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Item</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Drive Premiums</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Copy_Status__c</field>
            <operation>equals</operation>
            <value>Sent for Approval</value>
        </filters>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>8/11/2011</value>
        </filters>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>notContain</operation>
            <value>g</value>
        </filters>
        <label>Copy - Sent For Approval</label>
    </listViews>
    <recordTypes>
        <fullName>Item</fullName>
        <active>true</active>
        <label>Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>Package</fullName>
        <active>true</active>
        <label>Package</label>
    </recordTypes>
</CustomObject>